# tgstarter

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_tgstarter.py
tgstarter/: __init__.py
tgstarter/bot/: bot.py
tgstarter/dispatcher/: dispatcher.py
tgstarter/handler/: handler.py
tgstarter/middlewares/: state_switch.py
tgstarter/models/: storage.py
tgstarter/storage/: mongo_logger.py  mongo_storage.py
tgstarter/utils/: content.py  helper.py  jinja2_filters.py  typing.py  yaml_tools.py
