[tool.poetry]
name = "tgstarter"
version = "0.1.0"
description = ""
authors = ["eboshare <t.lila@list.ru>"]
homepage = "https://github.com/tgstarter/tgstarter"
repository = "https://github.com/tgstarter/tgstarter"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}
aiogram = "^2.6.1"
ujson = "^1.35"
addict = "^2.2.1"
aiohttp-socks = "^0.3.4"
motor = "^2.1.0"
jinja2 = "^2.11.1"
pyyaml = "^5.3"
apscheduler = "^3.6.3"
pydantic = "^1.4"
lxml = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.6.0"
flake8 = "^3.8.3"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
